# TokenUsage

./: .gitignore  01_PLAN.md  02_UI_REFERENCE_COMPARISON.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/tokenusage-core/: Cargo.toml
crates/tokenusage-core/src/: app_server.rs  domain.rs  lib.rs  paths.rs  provider.rs  settings.rs
scripts/: inspect-codex-account.mjs
src/: App.tsx  TaskbarInputProxy.tsx  TaskbarWidget.test.tsx  TaskbarWidget.tsx  api.ts  dashboard.test.ts  format.test.ts  format.ts  main.tsx  mockDashboard.test.ts  mockDashboard.ts  quota.ts  store.ts  styles.css  taskbar-input-proxy.css  taskbar-widget.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
