[package]
name = "tokenusage"
version = "0.1.0"
description = "Local Codex and Claude Code usage dashboard"
authors = ["TokenUsage contributors"]
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
default-run = "tokenusage"

[lib]
name = "tokenusage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tokenusage"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tokenusage-core = { path = "../crates/tokenusage-core" }
window-vibrancy = "0.7"
